<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_playlist"
        android:title="@string/new_playlist"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_history"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open"
        android:title="@string/open_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stream"
        android:title="@string/stream"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
